feat: attest protected-book genesis